# PersonalPlus

./: .gitignore  AppRoot.qml  CMakeLists.txt  Calendar.qml  CalendarMain.qml  CalendarOptions.qml  CalendarVisual.qml  CreateAccount.qml  Home.qml  Login.qml  Main.qml  NavBar.qml  appRoot.qml  createAccount.qml  folder_tree.txt  home.qml  login.qml  main.cpp  qml.qrc
databaseManager/: databasemanager.cpp  databasemanager.h
resources/: buttons.qrc  fonts.qrc  icons.qrc  images.qrc
